about html listo

--- a/bloglist.html
+++ b/bloglist.html
@@ -16,16 +16,16 @@
     <div id="slideout-menu">
         <ul>
             <li>
-                <a  href="index.html">Home</a>
+                <a href="#">Home</a>
             </li>
             <li>
-                <a class="active" href="bloglist.html">Blog</a>
+                <a href="#">Blog</a>
             </li>
             <li>
-                <a href="project.html">Projects</a>
+                <a href="#">Projects</a>
             </li>
             <li>
-                <a  href="about.html">About</a>
+                <a href="#">About</a>
             </li>
             <li>
                 <input type="text" placeholder="Search here">
@@ -47,13 +47,13 @@
         </div>
         <ul>
             <li>
-                <a  href="index.html">Home</a>
+                <a class="active" href="#">Home</a>
             </li>
             <li>
-                <a class="active" href="bloglist.html">Blog</a>
+                <a href="bloglist.html">Blog</a>
             </li>
             <li>
-                <a href="project.html">Projects</a>
+                <a href="bloglist.html">Projects</a>
             </li>
             <li>
                 <a href="about.html">About</a>
@@ -223,19 +223,19 @@
                 <p>
                 <ul>
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="#">Home</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="#">About</a>
                     </li>
                     <li>
                         <a href="#">Privacy Policy</a>
                     </li>
                     <li>
-                        <a class="active" href="blogpost.html">Blogs</a>
+                        <a href="#">Blogs</a>
                     </li>
                     <li>
-                        <a href="project.html">Projects</a>
+                        <a href="#">Projects</a>
                     </li>
                     <li>
                         <a href="#">Contact</a>
