index HTML listo

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <div id="slideout-menu">
         <ul>
             <li>
-                <a href="#">Home</a>
+                <a class="active" href="index.html">Home</a>
             </li>
             <li>
-                <a href="#">Blog</a>
+                <a href="bloglist.html">Blog</a>
             </li>
             <li>
-                <a href="#">Projects</a>
+                <a href="project.html">Projects</a>
             </li>
             <li>
-                <a href="#">About</a>
+                <a href="about.html">About</a>
             </li>
             <li>
                 <input type="text" placeholder="Search here">
@@ -47,13 +47,13 @@
         </div>
         <ul>
             <li>
-                <a class="active" href="#">Home</a>
+                <a class="active" href="index.html">Home</a>
             </li>
             <li>
                 <a href="bloglist.html">Blog</a>
             </li>
             <li>
-                <a href="bloglist.html">Projects</a>
+                <a href="project.html">Projects</a>
             </li>
             <li>
                 <a href="about.html">About</a>
@@ -125,7 +125,7 @@
         <section>
             <div class="card">
                 <div class="card-image">
-                    <a href="#">
+                    <a href="project.html">
                         <img src="img/3.jpg" alt="Card image" height="350px">
                     </a>
                 </div>
@@ -177,19 +177,19 @@
                 <p>
                 <ul>
                     <li>
-                        <a href="#">Home</a>
+                        <a class="active" href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="#">About</a>
+                        <a href="about.html">About</a>
                     </li>
                     <li>
                         <a href="#">Privacy Policy</a>
                     </li>
                     <li>
-                        <a href="#">Blogs</a>
+                        <a  href="blogpost.html">Blogs</a>
                     </li>
                     <li>
-                        <a href="#">Projects</a>
+                        <a href="project.html">Projects</a>
                     </li>
                     <li>
                         <a href="#">Contact</a>
